# ebtools

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: index.md
scripts/: README.md
src/ebtools/: __init__.py  _version.py
src/ebtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ebtools/data/: __init__.py  dateformats.py  dno.py  powerenergy.py  ukbankholidays.py  ukclockchangedays.py  units.py
src/ebtools/general/: __init__.py  _sp_efa_helpers.py  array_selection.py  dataframe_base.py  dataframe_conversion.py  dataframe_dates.py  dataframe_filtering.py  dataframe_formatting.py  dataframe_helpers.py  dataframe_plotting.py  dataframe_processing.py  dataframe_selection.py  datetime_adjustments.py  datetime_calendar.py  datetime_funcs.py  (+17 more)
tests/: README.md  test_array_selection.py  test_dataframe_base.py  test_dataframe_conversion.py  test_dataframe_dates.py  test_dataframe_exports.py  test_dataframe_filtering.py  test_dataframe_formatting.py  test_dataframe_helpers.py  test_dataframe_plotting.py  test_dataframe_processing.py  test_dataframe_selection.py  test_datetime_adjustments.py  test_datetime_calendar.py  test_datetime_conversion.py  test_datetime_dataframe.py  test_datetime_parsing.py  test_datetime_timezone.py  test_df_tools_string_dates.py  test_file_reading_tools.py  test_helper.py  test_inspect_funcs.py  test_online.py  test_read_data.py  test_save_data.py  test_sp_efa_conversion.py  test_sp_efa_dataframe.py  test_sp_efa_datetime.py  test_sp_efa_exports.py  test_sp_efa_strings.py
