[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebtools"
version = "0.1.0"
description = "Helper functions and data for electricity market data workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy>=2.3,<3",
    "pandas>=3.0,<4",
    "pytz>=2025.2",
    "pyarrow>=23.0,<24",
    "fastparquet>=2025.12",
    "openpyxl>=3.1,<4",
]

[tool.setuptools.packages.find]
where = ["src"]
